// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BookEdit When user is logged in renders book edit with button of LogOut 1`] = `
Array [
  <nav
    className="navbar is-dark"
  >
    <div
      className="container"
    >
      <div
        className="navbar-brand"
      >
        <a
          className="navbar-item"
          href="/"
        >
          <img
            alt="\\\\"
            className="d-inline-block align-top"
            src="https://img.icons8.com/emoji/452/orange-book.png"
          />
        </a>
        <div
          className="navbar-burger navbar-dropdown "
          data-target="navMenuColorblack-example"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="button"
          tabIndex="0"
        >
          <span />
          <span />
          <span />
        </div>
      </div>
      <div
        className="navbar-menu "
        id="navMenuColorblack-example"
      >
        <div
          className="navbar-end"
        >
          <a
            className="navbar-item"
            href="/"
            onClick={[Function]}
          >
            Home
          </a>
          <a
            className="navbar-item"
            href="/users/me"
            onClick={[Function]}
          >
            My Profile
          </a>
          <a
            className="navbar-item"
            href="/users"
            onClick={[Function]}
          >
            All Users
          </a>
          <a
            className="navbar-item"
            href="/books"
            onClick={[Function]}
          >
            Books
          </a>
          <a
            className="navbar-item"
            href="https://github.com/IIC2513-2021-1/grupo-demaciagang-p2-frontend"
            target="_blanck"
          >
             About Us
          </a>
          <a
            className="navbar-item"
            href="/notFound"
          >
            <img
              alt="\\\\"
              className="d-inline-block align-top"
              height="80"
              src="https://cdn.pixabay.com/photo/2013/07/12/17/50/bookmark-152545_960_720.png"
              width="40"
            />
          </a>
          <div
            className="navbar-item has-dropdown is-hoverable"
          >
            <p
              className="navbar-link"
            >
              Testman
              <div
                className="navbar-dropdown"
              >
                <button
                  className="like navbar-item"
                  onClick={[Function]}
                  type="submit"
                >
                  Log Out
                   
                   
                  <svg
                    fill="currentColor"
                    height="1em"
                    stroke="currentColor"
                    strokeWidth="0"
                    style={
                      Object {
                        "color": undefined,
                      }
                    }
                    viewBox="0 0 512 512"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M400 54.1c63 45 104 118.6 104 201.9 0 136.8-110.8 247.7-247.5 248C120 504.3 8.2 393 8 256.4 7.9 173.1 48.9 99.3 111.8 54.2c11.7-8.3 28-4.8 35 7.7L162.6 90c5.9 10.5 3.1 23.8-6.6 31-41.5 30.8-68 79.6-68 134.9-.1 92.3 74.5 168.1 168 168.1 91.6 0 168.6-74.2 168-169.1-.3-51.8-24.7-101.8-68.1-134-9.7-7.2-12.4-20.5-6.5-30.9l15.8-28.1c7-12.4 23.2-16.1 34.8-7.8zM296 264V24c0-13.3-10.7-24-24-24h-32c-13.3 0-24 10.7-24 24v240c0 13.3 10.7 24 24 24h32c13.3 0 24-10.7 24-24z"
                    />
                  </svg>
                </button>
              </div>
            </p>
          </div>
        </div>
      </div>
    </div>
  </nav>,
  <section
    className="hero Books is-fullheight"
  >
    <div
      className="hero-body"
    >
      <div
        className="container"
      >
        <div
          className="columns is-centered"
        >
          <div
            className="column is-5-tablet is-4-desktop is-3-widescreen"
          >
            <form
              action="#"
              className="box"
              onReset={[Function]}
              onSubmit={[Function]}
            >
              <div
                className="field"
              >
                <label
                  className="label"
                  htmlFor="Title"
                >
                  Title
                  <div
                    className="control has-icons-left"
                  >
                    <input
                      className="input"
                      name="title"
                      onBlur={[Function]}
                      onChange={[Function]}
                      placeholder="Title"
                      type="text"
                    />
                    <span
                      className="icon is-small is-left"
                    >
                      <svg
                        fill="currentColor"
                        height="1em"
                        stroke="currentColor"
                        strokeWidth="0"
                        style={
                          Object {
                            "color": undefined,
                          }
                        }
                        viewBox="0 0 1024 1024"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M832 64H192c-17.7 0-32 14.3-32 32v832c0 17.7 14.3 32 32 32h640c17.7 0 32-14.3 32-32V96c0-17.7-14.3-32-32-32zM668 345.9L621.5 312 572 347.4V124h96v221.9z"
                        />
                      </svg>
                    </span>
                  </div>
                </label>
              </div>
              <div
                className="field"
              >
                <label
                  className="label"
                  htmlFor="isbn"
                >
                  ISBN
                  <div
                    className="control has-icons-left"
                  >
                    <input
                      className="input"
                      name="isbn"
                      onBlur={[Function]}
                      onChange={[Function]}
                      placeholder="9786124497001"
                      type="number"
                    />
                    <span
                      className="icon is-small is-left"
                    >
                      <svg
                        fill="currentColor"
                        height="1em"
                        stroke="currentColor"
                        strokeWidth="0"
                        style={
                          Object {
                            "color": undefined,
                          }
                        }
                        viewBox="0 0 16 16"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          clipRule="evenodd"
                          d="M5.854 4.146a.5.5 0 010 .708L2.707 8l3.147 3.146a.5.5 0 01-.708.708l-3.5-3.5a.5.5 0 010-.708l3.5-3.5a.5.5 0 01.708 0zm4.292 0a.5.5 0 000 .708L13.293 8l-3.147 3.146a.5.5 0 00.708.708l3.5-3.5a.5.5 0 000-.708l-3.5-3.5a.5.5 0 00-.708 0z"
                          fillRule="evenodd"
                        />
                      </svg>
                    </span>
                  </div>
                </label>
              </div>
              <div
                className="field"
              >
                <label
                  className="label"
                  htmlFor="author"
                >
                  Author
                  <div
                    className="control has-icons-left"
                  >
                    <input
                      className="input"
                      name="author"
                      onBlur={[Function]}
                      onChange={[Function]}
                      placeholder="Bastian Hilcker"
                      type="text"
                    />
                    <span
                      className="icon is-small is-left"
                    >
                      <svg
                        fill="currentColor"
                        height="1em"
                        stroke="currentColor"
                        strokeWidth="0"
                        style={
                          Object {
                            "color": undefined,
                          }
                        }
                        viewBox="0 0 16 16"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          clipRule="evenodd"
                          d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3zm5-6a3 3 0 100-6 3 3 0 000 6z"
                          fillRule="evenodd"
                        />
                      </svg>
                    </span>
                  </div>
                </label>
              </div>
              <div
                className="field"
              >
                <label
                  className="label"
                  htmlFor="genre"
                >
                  Genre
                  <div
                    className="control has-icons-left"
                  >
                    <input
                      className="input"
                      name="genre"
                      onBlur={[Function]}
                      onChange={[Function]}
                      placeholder="Fantasy"
                      type="text"
                    />
                    <span
                      className="icon is-small is-left"
                    >
                      <svg
                        fill="currentColor"
                        height="1em"
                        stroke="currentColor"
                        strokeWidth="0"
                        style={
                          Object {
                            "color": undefined,
                          }
                        }
                        viewBox="0 0 512 512"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M494 20L304.887 143.357c16.494 14.608 32.743 22.57 44.963 36.97zM298.346 93.594c-12.58.436-26.59 4.984-38.047 11.77-7.64 4.523-14.115 9.97-18.304 15.142-4.19 5.173-5.79 9.832-5.648 12.668l.283 5.73-5.075 2.676C133.713 193.16 80.945 250.727 18 310.594V494h166.047c6.145-15.424 12.724-33.898 15.086-47.535 1.728-9.977-2.783-21.807-8.23-35.244-5.444-13.436-11.85-28.706-7.63-45.423 3.49-13.827 14.375-25.752 24.096-35.656 4.45-4.534 8.71-8.463 12.075-11.445-6.558-8.577-14.065-20.315-16.51-34.894l17.75-2.978c2.68 15.976 15.203 28.533 22.8 39.24l-.323.23c10.54 14.634 18.892 28.395 30.72 37.546 13.358 10.337 31.484 16.39 66.526 11.49l6.658-.932 2.782 6.124c6.96 15.322 14.372 23.89 21.015 28.423 6.643 4.535 12.63 5.46 18.692 4.79 12.125-1.34 24.29-10.974 27.76-14.264 4.13-3.92 9.657-9.476 13.32-16.124 3.347-6.076 5.073-12.687 3.48-20.744-42.68-37.562-69.592-108.75-90.256-152.6-9.245-19.62-35.786-34.492-52.967-47.95-2.427-1.4-2.675-2.582-3.24-5.154-4.215-19.167 3.188-40.257 10.974-57.298-.096.002-.186-.01-.28-.006zM59.352 136.55c17.863 4.925 37.775 9.665 57.406 14.815 14.803 3.883 29.26 7.935 42.406 12.766 17.914-12.178 37.407-24.123 59.072-35.77-51.62-13.3-109.928-3.148-158.884 8.19zm28.738 26.126c-23.002 4.133-45.974 10.254-67.147 16.662 18.133 3.813 38.298 7.314 58.207 11.242 11.774 2.323 23.337 4.766 34.256 7.643a686.475 686.475 0 0 1 27.403-21.15c-9.044-2.932-18.71-5.698-28.62-8.298-7.952-2.086-16.043-4.098-24.1-6.1zM47.44 202.94c-9.875 2.096-19.728 4.582-29.44 7.29v18.04a2251.165 2251.165 0 0 1 20.172 3.146c10.505 1.7 20.847 3.498 30.734 5.625 8.836-8.185 17.887-16.322 27.268-24.397-6.64-1.56-13.52-3.024-20.508-4.403-9.32-1.838-18.81-3.566-28.227-5.3zM304 224c8.837 0 16 7.163 16 16s-7.163 16-16 16-16-7.163-16-16 7.163-16 16-16zM18 246.512v26.58c4.16.195 8.28.425 12.342.71 7.44-7.2 14.878-14.384 22.387-21.538a604.747 604.747 0 0 0-17.433-3.078A1501.67 1501.67 0 0 0 18 246.512z"
                        />
                      </svg>
                    </span>
                  </div>
                </label>
              </div>
              <div
                className="field"
              >
                <label
                  className="label"
                  htmlFor="description"
                >
                  Description
                  <div
                    className="control"
                  >
                    <input
                      className="textarea"
                      name="description"
                      onBlur={[Function]}
                      onChange={[Function]}
                      placeholder="Noice"
                      type="text"
                    />
                  </div>
                </label>
              </div>
              <input
                className="input"
                name="userId"
                onBlur={[Function]}
                onChange={[Function]}
                type="hidden"
              />
              <div
                className="file"
              >
                <label
                  className="file-label"
                  htmlFor="upload-file"
                >
                  <input
                    className="file-input"
                    id="upload-file"
                    name="resume"
                    onChange={[Function]}
                    type="file"
                  />
                  <span
                    className="file-cta"
                  >
                    <span
                      className="file-icon"
                    >
                      <svg
                        fill="none"
                        height="1em"
                        stroke="currentColor"
                        strokeLinecap="round"
                        strokeLinejoin="round"
                        strokeWidth="2"
                        style={
                          Object {
                            "color": undefined,
                          }
                        }
                        viewBox="0 0 24 24"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"
                        />
                        <polyline
                          points="17 8 12 3 7 8"
                        />
                        <line
                          x1="12"
                          x2="12"
                          y1="3"
                          y2="15"
                        />
                      </svg>
                    </span>
                    <span
                      className="file-label"
                    >
                      <h2>
                        Choose a file...
                      </h2>
                    </span>
                  </span>
                </label>
              </div>
              <br />
              <div
                className="field"
              >
                <button
                  className="button is-success"
                  type="submit"
                >
                  Edit Book
                </button>
              </div>
            </form>
            <p>
              
            </p>
          </div>
        </div>
      </div>
    </div>
  </section>,
  <footer
    className="footer"
  >
    <div
      className="content has-text-centered"
    >
      <a
        className="navbar-item"
        href="https://www.instagram.com/bastian_hilcker/"
        target="_blanck"
      >
        Check our Instagram
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          strokeWidth="0"
          style={
            Object {
              "color": undefined,
            }
          }
          viewBox="0 0 1024 1024"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M512 306.9c-113.5 0-205.1 91.6-205.1 205.1S398.5 717.1 512 717.1 717.1 625.5 717.1 512 625.5 306.9 512 306.9zm0 338.4c-73.4 0-133.3-59.9-133.3-133.3S438.6 378.7 512 378.7 645.3 438.6 645.3 512 585.4 645.3 512 645.3zm213.5-394.6c-26.5 0-47.9 21.4-47.9 47.9s21.4 47.9 47.9 47.9 47.9-21.3 47.9-47.9a47.84 47.84 0 0 0-47.9-47.9zM911.8 512c0-55.2.5-109.9-2.6-165-3.1-64-17.7-120.8-64.5-167.6-46.9-46.9-103.6-61.4-167.6-64.5-55.2-3.1-109.9-2.6-165-2.6-55.2 0-109.9-.5-165 2.6-64 3.1-120.8 17.7-167.6 64.5C132.6 226.3 118.1 283 115 347c-3.1 55.2-2.6 109.9-2.6 165s-.5 109.9 2.6 165c3.1 64 17.7 120.8 64.5 167.6 46.9 46.9 103.6 61.4 167.6 64.5 55.2 3.1 109.9 2.6 165 2.6 55.2 0 109.9.5 165-2.6 64-3.1 120.8-17.7 167.6-64.5 46.9-46.9 61.4-103.6 64.5-167.6 3.2-55.1 2.6-109.8 2.6-165zm-88 235.8c-7.3 18.2-16.1 31.8-30.2 45.8-14.1 14.1-27.6 22.9-45.8 30.2C695.2 844.7 570.3 840 512 840c-58.3 0-183.3 4.7-235.9-16.1-18.2-7.3-31.8-16.1-45.8-30.2-14.1-14.1-22.9-27.6-30.2-45.8C179.3 695.2 184 570.3 184 512c0-58.3-4.7-183.3 16.1-235.9 7.3-18.2 16.1-31.8 30.2-45.8s27.6-22.9 45.8-30.2C328.7 179.3 453.7 184 512 184s183.3-4.7 235.9 16.1c18.2 7.3 31.8 16.1 45.8 30.2 14.1 14.1 22.9 27.6 30.2 45.8C844.7 328.7 840 453.7 840 512c0 58.3 4.7 183.2-16.2 235.8z"
          />
        </svg>
      </a>
    </div>
  </footer>,
]
`;

exports[`BookEdit When user is not logged in renders LogIn 1`] = `
Array [
  <nav
    className="navbar is-dark"
  >
    <div
      className="container"
    >
      <div
        className="navbar-brand"
      >
        <a
          className="navbar-item"
          href="/"
        >
          <img
            alt="\\\\"
            className="d-inline-block align-top"
            src="https://img.icons8.com/emoji/452/orange-book.png"
          />
        </a>
        <div
          className="navbar-burger navbar-dropdown "
          data-target="navMenuColorblack-example"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="button"
          tabIndex="0"
        >
          <span />
          <span />
          <span />
        </div>
      </div>
      <div
        className="navbar-menu "
        id="navMenuColorblack-example"
      >
        <div
          className="navbar-end"
        >
          <a
            className="navbar-item"
            href="/"
            onClick={[Function]}
          >
            Home
          </a>
          
          <a
            className="navbar-item"
            href="/books"
            onClick={[Function]}
          >
            Books
          </a>
          <a
            className="navbar-item"
            href="https://github.com/IIC2513-2021-1/grupo-demaciagang-p2-frontend"
            target="_blanck"
          >
             About Us
          </a>
          <a
            className="navbar-item"
            href="/notFound"
          >
            <img
              alt="\\\\"
              className="d-inline-block align-top"
              height="80"
              src="https://cdn.pixabay.com/photo/2013/07/12/17/50/bookmark-152545_960_720.png"
              width="40"
            />
          </a>
          <a
            className="navbar-item"
            href="/login"
            onClick={[Function]}
          >
            Log In
          </a>
          <a
            className="navbar-item"
            href="/signup"
            onClick={[Function]}
          >
            Sign Up
          </a>
        </div>
      </div>
    </div>
  </nav>,
  <section
    className="hero is-success is-fullheight"
  >
    <div
      className="hero-body"
    >
      <div
        className="container"
      >
        <div
          className="columns is-centered"
        >
          <div
            className="column is-5-tablet is-4-desktop is-3-widescreen"
          >
            <form
              className="box"
              onSubmit={[Function]}
            >
              <div
                className="field"
              >
                <label
                  className="label"
                  htmlFor="email"
                >
                  Email
                  <div
                    className="control has-icons-left  has-icons-right"
                  >
                    <input
                      className="input"
                      id="email"
                      name="email"
                      onChange={[Function]}
                      placeholder="example@domain.com"
                      required={true}
                      type="text"
                      value=""
                    />
                    <span
                      className="icon is-small is-left"
                    >
                      <svg
                        fill="currentColor"
                        height="1em"
                        stroke="currentColor"
                        strokeWidth="0"
                        style={
                          Object {
                            "color": undefined,
                          }
                        }
                        viewBox="0 0 512 512"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M464 64H48C21.49 64 0 85.49 0 112v288c0 26.51 21.49 48 48 48h416c26.51 0 48-21.49 48-48V112c0-26.51-21.49-48-48-48zm0 48v40.805c-22.422 18.259-58.168 46.651-134.587 106.49-16.841 13.247-50.201 45.072-73.413 44.701-23.208.375-56.579-31.459-73.413-44.701C106.18 199.465 70.425 171.067 48 152.805V112h416zM48 400V214.398c22.914 18.251 55.409 43.862 104.938 82.646 21.857 17.205 60.134 55.186 103.062 54.955 42.717.231 80.509-37.199 103.053-54.947 49.528-38.783 82.032-64.401 104.947-82.653V400H48z"
                        />
                      </svg>
                    </span>
                    <span
                      className="icon is-small is-right"
                    >
                      <svg
                        enableBackground="new 0 0 48 48"
                        fill="currentColor"
                        height="1em"
                        stroke="currentColor"
                        strokeWidth="0"
                        style={
                          Object {
                            "color": undefined,
                          }
                        }
                        version="1"
                        viewBox="0 0 48 48"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <polygon
                          fill="#43A047"
                          points="40.6,12.1 17,35.7 7.4,26.1 4.6,29 17,41.3 43.4,14.9"
                        />
                      </svg>
                    </span>
                  </div>
                </label>
              </div>
              <div
                className="field"
              >
                <label
                  className="label"
                  htmlFor="password"
                >
                  Password
                  <div
                    className="control has-icons-left"
                  >
                    <input
                      className="input"
                      id="password"
                      name="password"
                      onChange={[Function]}
                      placeholder="*******"
                      required={true}
                      type="password"
                      value=""
                    />
                    <span
                      className="icon is-small is-left"
                    >
                      <svg
                        fill="currentColor"
                        height="1em"
                        stroke="currentColor"
                        strokeWidth="0"
                        style={
                          Object {
                            "color": undefined,
                          }
                        }
                        viewBox="0 0 1024 1024"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M832 464h-68V240c0-70.7-57.3-128-128-128H388c-70.7 0-128 57.3-128 128v224h-68c-17.7 0-32 14.3-32 32v384c0 17.7 14.3 32 32 32h640c17.7 0 32-14.3 32-32V496c0-17.7-14.3-32-32-32zM540 701v53c0 4.4-3.6 8-8 8h-40c-4.4 0-8-3.6-8-8v-53a48.01 48.01 0 1 1 56 0zm152-237H332V240c0-30.9 25.1-56 56-56h248c30.9 0 56 25.1 56 56v224z"
                        />
                      </svg>
                    </span>
                  </div>
                </label>
              </div>
              <div
                className="field"
              >
                <label
                  className="checkbox"
                  htmlFor="checkbox"
                >
                  <input
                    type="checkbox"
                  />
                  Remember me
                </label>
              </div>
              <div
                className="field"
              >
                <button
                  className="button is-success"
                  disabled={true}
                  type="submit"
                >
                  Login
                </button>
              </div>
            </form>
            <p>
              
            </p>
          </div>
        </div>
      </div>
    </div>
  </section>,
  <footer
    className="footer"
  >
    <div
      className="content has-text-centered"
    >
      <a
        className="navbar-item"
        href="https://www.instagram.com/bastian_hilcker/"
        target="_blanck"
      >
        Check our Instagram
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          strokeWidth="0"
          style={
            Object {
              "color": undefined,
            }
          }
          viewBox="0 0 1024 1024"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M512 306.9c-113.5 0-205.1 91.6-205.1 205.1S398.5 717.1 512 717.1 717.1 625.5 717.1 512 625.5 306.9 512 306.9zm0 338.4c-73.4 0-133.3-59.9-133.3-133.3S438.6 378.7 512 378.7 645.3 438.6 645.3 512 585.4 645.3 512 645.3zm213.5-394.6c-26.5 0-47.9 21.4-47.9 47.9s21.4 47.9 47.9 47.9 47.9-21.3 47.9-47.9a47.84 47.84 0 0 0-47.9-47.9zM911.8 512c0-55.2.5-109.9-2.6-165-3.1-64-17.7-120.8-64.5-167.6-46.9-46.9-103.6-61.4-167.6-64.5-55.2-3.1-109.9-2.6-165-2.6-55.2 0-109.9-.5-165 2.6-64 3.1-120.8 17.7-167.6 64.5C132.6 226.3 118.1 283 115 347c-3.1 55.2-2.6 109.9-2.6 165s-.5 109.9 2.6 165c3.1 64 17.7 120.8 64.5 167.6 46.9 46.9 103.6 61.4 167.6 64.5 55.2 3.1 109.9 2.6 165 2.6 55.2 0 109.9.5 165-2.6 64-3.1 120.8-17.7 167.6-64.5 46.9-46.9 61.4-103.6 64.5-167.6 3.2-55.1 2.6-109.8 2.6-165zm-88 235.8c-7.3 18.2-16.1 31.8-30.2 45.8-14.1 14.1-27.6 22.9-45.8 30.2C695.2 844.7 570.3 840 512 840c-58.3 0-183.3 4.7-235.9-16.1-18.2-7.3-31.8-16.1-45.8-30.2-14.1-14.1-22.9-27.6-30.2-45.8C179.3 695.2 184 570.3 184 512c0-58.3-4.7-183.3 16.1-235.9 7.3-18.2 16.1-31.8 30.2-45.8s27.6-22.9 45.8-30.2C328.7 179.3 453.7 184 512 184s183.3-4.7 235.9 16.1c18.2 7.3 31.8 16.1 45.8 30.2 14.1 14.1 22.9 27.6 30.2 45.8C844.7 328.7 840 453.7 840 512c0 58.3 4.7 183.2-16.2 235.8z"
          />
        </svg>
      </a>
    </div>
  </footer>,
]
`;
